Fixing build failures